created javascript files

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	</head>
 	<body>
 
-
-
-
-
+	<div id="bg-color" class="banner"></div>
 
 		<!--Always keep the Javascript files at the bottom of the body tag so it loads only after the features of the sight shows-->
-		<script src="js/script.js"></script>
+		<!--- <script src="js/script.js"></script> -->
+		<!-- <script src="js/loops.js"></script> -->
+		<!-- <script src="js/functions-methods.js"></script> -->
+		<script src="js/bg-change.js"></script>
 	</body>
 </html>
